fixed arrival alignment bug

--- a/styles.css
+++ b/styles.css
@@ -326,6 +326,7 @@ p.price {
 .case {
   padding: 60px 30px;
   position: relative;
+  overflow: hidden;
 }
 .category {
   font-size: 0.9rem;
@@ -353,7 +354,6 @@ p.price {
   background: #ffedcd;
   grid-column: 4/5;
   grid-row: 1/3;
-  overflow: hidden;
 }
 .case__4 {
   background: #e2f0df;
@@ -395,6 +395,7 @@ p.price {
 }
 .feature {
   width: 230px;
+  transform: translateY(-30px);
 }
 .arrival {
   position: absolute;
